[workspace]
resolver = "2"
members = ["roy", "roy-common", "roy-ebpf"]
default-members = ["roy", "roy-common"]

[workspace.package]
version = "2026.2.22"
license = "MIT OR Apache-2.0"
edition = "2024"
description = "Kubernetes AdmissionControl webhook to validate or mutate Ingress/Gateway to ensure it contains TLS setup"
repository = "https://github.com/Magicloud/ingress-tls"
keywords = ["Kubernetes", "Ingress", "TLS"]
categories = ["config"]
readme = "README.md"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

bytemuck = { version = "1", default-features = false, features = ["derive"] }

[profile.release.package.roy-ebpf]
debug = 2
codegen-units = 1
