[package]
name = "roy"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
roy-common = { path = "../roy-common", features = ["user"] }

aya = { workspace = true }
aya-log = { workspace = true }
bytemuck = { workspace = true, default-features = false, features = ["derive"] }
anyhow = { version = "*" }
env_logger = { version = "*" }
libc = { version = "*" }
log = { version = "*" }
tokio = { version = "*", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
clap = { version = "*", features = ["derive"] }
k8s-openapi = { version = "*", features = ["earliest"] }
kube = { version = "*" }
async_from = { version = "*" }
procfs = { version = "*" }
async-walkdir = { version = "*" }
futures = { version = "*" }
ipnetwork = { version = "*" }

[build-dependencies]
aya-build = { workspace = true }

anyhow = { version = "*" }
cargo_metadata = { version = "*" }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependency so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
roy-ebpf = { path = "../roy-ebpf" }

[[bin]]
name = "roy"
path = "src/main.rs"
