[package]
name = "roy"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
roy-common = { path = "../roy-common", features = ["user"] }

aya = { workspace = true }
aya-log = { workspace = true }
bytemuck = { workspace = true, default-features = false, features = ["derive"] }


# Tried Smol. AsyncIO crate involves unsafe. Why Tokio AsyncFd could work without me to unsafe?
eyre = { version = "*" }
color-eyre = { version = "*" }
libc = { version = "*" }
tokio = { version = "*", features = ["full"] }
tokio-stream = { version = "*", features = ["full"] }
clap = { version = "*", features = ["derive"] }
k8s-openapi = { version = "*", features = ["earliest"] }
kube = { version = "*" }
async_from = { version = "*" }
procfs = { version = "*" }
futures = { version = "*" }
ipnetwork = { version = "*" }
tracing = { version = "*" }
tracing-error = { version = "*" }
tracing-subscriber = { version = "*", features = ["env-filter"] }
opentelemetry = { version = "*" }
opentelemetry_sdk = { version = "*" }
opentelemetry-appender-tracing = { version = "*" }
opentelemetry-otlp = { version = "*", default-features = false, features = [
    "logs",
    "grpc-tonic",
] }
opentelemetry-stdout = { version = "*" }
ouroboros = { version = "*" }

[build-dependencies]
aya-build = { workspace = true }

eyre = { version = "*" }
cargo_metadata = { version = "*" }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependency so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
roy-ebpf = { path = "../roy-ebpf" }

[[bin]]
name = "roy"
path = "src/main.rs"
