[package]
name = "roy"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
roy-common = { path = "../roy-common", features = ["user"] }

aya = { workspace = true }
aya-log = { workspace = true }
bytemuck = { workspace = true, default-features = false, features = ["derive"] }


# Tried Smol. AsyncIO crate involves unsafe. Why Tokio AsyncFd could work without me to unsafe?
eyre = { version = "0.6" }
color-eyre = { version = "0.6" }
libc = { version = "0.2" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
k8s-openapi = { version = "0.27", features = ["earliest"] }
kube = { version = "3" }
async_from = { version = "0.2" }
procfs = { version = "0.18" }
futures = { version = "0.3" }
ipnetwork = { version = "0.21" }
tracing = { version = "0.1" }
tracing-error = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.31" }
opentelemetry_sdk = { version = "0.31" }
opentelemetry-appender-tracing = { version = "0.31" }
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
    "logs",
    "grpc-tonic",
] }
opentelemetry-stdout = { version = "0.31" }
ouroboros = { version = "0.18" }

[build-dependencies]
aya-build = { workspace = true }

eyre = { version = "0.6" }
cargo_metadata = { version = "0.23" }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependency so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
roy-ebpf = { path = "../roy-ebpf" }

[[bin]]
name = "roy"
path = "src/main.rs"
